fixed listgroup going out of screen when xl screen hehe

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -27,7 +27,6 @@ body {
 
 .list-group {
     display: flex;
-    width: 100vw;
     flex-direction: row;
     flex-wrap: wrap;
 }
